--- a/juego.html
+++ b/juego.html
@@ -10,9 +10,9 @@
     <div class="contenedor">
         <h2>Bienvenido...</h2>
         <p>Que empiece el juego, buena suerte: </p>
-        <button class="piedra" onclick="play('piedra')">✊ Piedra</button>
-        <button class="papel" onclick="play('papel')">✋ Papel</button>
-        <button class="tijeras" onclick="play('tijeras')"> ✌️ Tijeras</button>
+        <button class="piedra" data-choice="piedra" onclick="play(this)">✊ Piedra</button>
+        <button class="papel" data-choice="papel" onclick="play(this)">✋ Papel</button>
+        <button class="tijeras" data-choice="tijera" onclick="play(this)">✌️ Tijeras</button>
         <p id="result"></p>
         <button class ="bBasicos" onclick="cerrarSesion()">Cerrar Sesión</button>
     </div>
