--- a/registrar.html
+++ b/registrar.html
@@ -12,7 +12,7 @@
         <input type="text" id="registroUser" placeholder="Escribe tu Usuario">
         <input type="password" id="registroContraseña" placeholder="Escribe tu Contraseña">
         <button class="bBasicos" onclick="registroValidacion()">Registrar</button>
-        <p>¿Ya tienes una cuenta?<a href="inicioSesion.html">Inicia Sesión aquí</a></p>
+        <p>¿Ya tienes una cuenta?<a href="index.html">Inicia Sesión aquí</a></p>
     </div>
     <script src="script.js"></script>
 </body>
